<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Details</string>

    <string name="notification_channel_id" translatable="false">downloads</string>
    <string name="notification_channel_name" translatable="true">Downloads</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description_succeed">Successfully downloaded %s</string>
    <string name="notification_description_fail">Failed to download %s</string>
    <string name="notification_button">View</string>

    <string name="glide_description">Glide - Image loading library by BumpTech</string>
    <string name="loadapp_description">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="custom_url">Custom URL</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="custom_url_hint">Enter your URL to download</string>
    <string name="no_option">Choose download option first</string>
    <string name="invalid_url">Invalid URL</string>

    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="reason">Reason</string>
    <string name="uri">URI</string>
    <string name="size">Size</string>

</resources>
